versions/v4.2.0/doxygen/html/group__coap__client.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/group__coap__client.html
original_path: doxygen/html/group__coap__client.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

CoAP client API

[Connectivity](group__connectivity.md) » [Networking](group__networking.md)

CoAP client API.
[More...](#details)

| Data Structures | |
| --- | --- |
| struct | [coap\_client\_request](structcoap__client__request.md) |
|  | Representation of a CoAP client request. [More...](structcoap__client__request.md#details) |
| struct | [coap\_client\_option](structcoap__client__option.md) |
|  | Representation of extra options for the CoAP client request. [More...](structcoap__client__option.md#details) |

| Macros | |
| --- | --- |
| #define | [MAX\_COAP\_MSG\_LEN](#ga53c57dcb241786b6e0213a7198667bd0) |
|  | Maximum size of a CoAP message. |

| Typedefs | |
| --- | --- |
| typedef void(\* | [coap\_client\_response\_cb\_t](#ga0a33095a309016ddb4ff00206cfd4bb0)) ([int16\_t](stdint_8h.md#afe270aee8d96ad7f279a4020b9d58bdf) result\_code, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) offset, const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*payload, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) len, [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) last\_block, void \*user\_data) |
|  | Callback for CoAP request. |

| Functions | |
| --- | --- |
| int | [coap\_client\_init](#gac85c4bcbc129b5d2be6a74f9024c84d9) (struct coap\_client \*client, const char \*info) |
|  | Initialize the CoAP client. |
| int | [coap\_client\_req](#ga028ebc6d75d98868599bca8b6ae56308) (struct coap\_client \*client, int sock, const struct [sockaddr](structsockaddr.md) \*addr, struct [coap\_client\_request](structcoap__client__request.md) \*req, struct [coap\_transmission\_parameters](structcoap__transmission__parameters.md) \*params) |
|  | Send CoAP request. |
| void | [coap\_client\_cancel\_requests](#ga3f511d4df22bece05c1ac97ff4d09a80) (struct coap\_client \*client) |
|  | Cancel all current requests. |
| void | [coap\_client\_cancel\_request](#ga71abc48834df15e7550f7f9c75918117) (struct coap\_client \*client, struct [coap\_client\_request](structcoap__client__request.md) \*req) |
|  | Cancel matching requests. |
| struct [coap\_client\_option](structcoap__client__option.md) | [coap\_client\_option\_initial\_block2](#ga437ead308ea92f314fd9ebb82a6300b7) (void) |
|  | Initialise a Block2 option to be added to a request. |
| [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) | [coap\_client\_has\_ongoing\_exchange](#ga9460711a90567fccb810fb4d93dbe841) (struct coap\_client \*client) |
|  | Check if client has ongoing exchange. |

## Detailed Description

CoAP client API.

Since
:   3.4

Version
:   0.1.0

## Macro Definition Documentation

## [◆ ](#ga53c57dcb241786b6e0213a7198667bd0)MAX\_COAP\_MSG\_LEN

| #define MAX\_COAP\_MSG\_LEN |
| --- |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

**Value:**

(CONFIG\_COAP\_CLIENT\_MESSAGE\_HEADER\_SIZE + \

CONFIG\_COAP\_CLIENT\_MESSAGE\_SIZE)

Maximum size of a CoAP message.

## Typedef Documentation

## [◆ ](#ga0a33095a309016ddb4ff00206cfd4bb0)coap\_client\_response\_cb\_t

| typedef void(\* coap\_client\_response\_cb\_t) ([int16\_t](stdint_8h.md#afe270aee8d96ad7f279a4020b9d58bdf) result\_code, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) offset, const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*payload, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) len, [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) last\_block, void \*user\_data) |
| --- |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

Callback for CoAP request.

This callback is called for responses to CoAP client requests. It is used to indicate errors, response codes from server or to deliver payload. Blockwise transfers cause this callback to be called sequentially with increasing payload offset and only partial content in buffer pointed by payload parameter.

Parameters
:   | result\_code | Result code of the response. Negative if there was a failure in send. [coap\_response\_code](group__coap.md#ga1ea81a365834e96f43ab7be573069d26 "coap_response_code") for positive. |
    | --- | --- |
    | offset | Payload offset from the beginning of a blockwise transfer. |
    | payload | Buffer containing the payload from the response. NULL for empty payload. |
    | len | Size of the payload. |
    | last\_block | Indicates the last block of the response. |
    | user\_data | User provided context. |

## Function Documentation

## [◆ ](#ga71abc48834df15e7550f7f9c75918117)coap\_client\_cancel\_request()

| void coap\_client\_cancel\_request | ( | struct coap\_client \* | *client*, |
| --- | --- | --- | --- |
|  |  | struct [coap\_client\_request](structcoap__client__request.md) \* | *req* ) |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

Cancel matching requests.

This function cancels all CoAP client request that matches the given request. The request is matched based on the method, path, callback and user\_data, if provided. Any field set to NULL is considered a wildcard.

(struct [coap\_client\_request](structcoap__client__request.md "Representation of a CoAP client request.")){0} cancels all requests. (struct [coap\_client\_request](structcoap__client__request.md "Representation of a CoAP client request.")){.method = COAP\_METHOD\_GET} cancels all GET requests.

Parameters
:   | client | Pointer to the CoAP client instance. |
    | --- | --- |
    | req | Pointer to the CoAP client request to be canceled. |

## [◆ ](#ga3f511d4df22bece05c1ac97ff4d09a80)coap\_client\_cancel\_requests()

| void coap\_client\_cancel\_requests | ( | struct coap\_client \* | *client* | ) |  |
| --- | --- | --- | --- | --- | --- |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

Cancel all current requests.

This is intended for canceling long-running requests (e.g. GETs with the OBSERVE option set) which has gone stale for some reason. The function should also be called before the corresponding client socket is closed, to prevent the socket from being monitored by the internal polling thread.

Parameters
:   | client | Client instance. |
    | --- | --- |

## [◆ ](#ga9460711a90567fccb810fb4d93dbe841)coap\_client\_has\_ongoing\_exchange()

| [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) coap\_client\_has\_ongoing\_exchange | ( | struct coap\_client \* | *client* | ) |  |
| --- | --- | --- | --- | --- | --- |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

Check if client has ongoing exchange.

Note
:   Function not only considers ongoing requests, but also lifetime of completed requests (which provides graceful duplicates handling).
:   For socket handling. Function does no consider a socket POLL that has started before this call, therefore it is recommended to wait out POLL timeout before closing socket (e.g. call [coap\_client\_cancel\_requests()](#ga3f511d4df22bece05c1ac97ff4d09a80) which applies delay for timeout).

Parameters
:   | client | Pointer to the CoAP client instance. |
    | --- | --- |

Returns
:   true if there is an ongoing exchange, false otherwise.

## [◆ ](#gac85c4bcbc129b5d2be6a74f9024c84d9)coap\_client\_init()

| int coap\_client\_init | ( | struct coap\_client \* | *client*, |
| --- | --- | --- | --- |
|  |  | const char \* | *info* ) |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

Initialize the CoAP client.

Parameters
:   | [in] | client | Client instance. |
    | --- | --- | --- |
    | [in] | info | Name for the receiving thread of the client. Setting this NULL will result as default name of "coap\_client". |

Returns
:   int Zero on success, otherwise a negative error code.

## [◆ ](#ga437ead308ea92f314fd9ebb82a6300b7)coap\_client\_option\_initial\_block2()

| struct [coap\_client\_option](structcoap__client__option.md) coap\_client\_option\_initial\_block2 | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

Initialise a Block2 option to be added to a request.

If the application expects a request to require a blockwise transfer, it may pre-emptively suggest a maximum block size to the server - see RFC7959 Figure 3: Block-Wise GET with Early Negotiation.

This helper function returns a Block2 option to send with the initial request.

Returns
:   CoAP client initial Block2 option structure

## [◆ ](#ga028ebc6d75d98868599bca8b6ae56308)coap\_client\_req()

| int coap\_client\_req | ( | struct coap\_client \* | *client*, |
| --- | --- | --- | --- |
|  |  | int | *sock*, |
|  |  | const struct [sockaddr](structsockaddr.md) \* | *addr*, |
|  |  | struct [coap\_client\_request](structcoap__client__request.md) \* | *req*, |
|  |  | struct [coap\_transmission\_parameters](structcoap__transmission__parameters.md) \* | *params* ) |

`#include <[zephyr/net/coap_client.h](coap__client_8h.md)>`

Send CoAP request.

Operation is handled asynchronously using a background thread. If the socket isn't connected to a destination address, user must provide a destination address, otherwise the address should be set as NULL. Once the callback is called with last block set as true, socket can be closed or used for another query.

Parameters
:   | client | Client instance. |
    | --- | --- |
    | sock | Open socket file descriptor. |
    | addr | the destination address of the request, NULL if socket is already connected. |
    | req | CoAP request structure |
    | params | Pointer to transmission parameters structure or NULL to use default values. |

Returns
:   zero when operation started successfully or negative error code otherwise.

- Generated on  for Zephyr API Documentation by [![doxygen](doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
